@@ -2,13 +2,13 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Image Library Plugin
 Bundle-SymbolicName: org.netxms.ui.eclipse.imagelibrary;singleton:=true
-Bundle-Version: 1.1.3
+Bundle-Version: 1.2.5
 Bundle-Activator: org.netxms.ui.eclipse.imagelibrary.Activator
 Bundle-Vendor: netxms.org
-Require-Bundle: org.eclipse.ui,
- org.eclipse.core.runtime,
- org.netxms.ui.eclipse.library;bundle-version="1.1.9",
- org.netxms.ui.eclipse.console;bundle-version="1.1.9",
+Require-Bundle: org.eclipse.ui;bundle-version="3.7.0",
+ org.eclipse.core.runtime;bundle-version="3.7.0",
+ org.netxms.ui.eclipse.library;bundle-version="1.2.5",
+ org.netxms.ui.eclipse.console;bundle-version="1.2.5",
  org.netxms.nebula.widgets.gallery;bundle-version="0.5.3"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
