@@ -10,7 +10,7 @@ Require-Bundle: org.netxms.ui.eclipse.library;bundle-version="1.2.5",
  org.eclipse.core.runtime;bundle-version="3.7.0",
  org.netxms.ui.eclipse.console;bundle-version="1.2.5",
  org.netxms.ui.eclipse.objectbrowser;bundle-version="1.2.5",
- org.netxms.ui.eclipse.imagelibrary;bundle-version="1.1.3",
+ org.netxms.ui.eclipse.imagelibrary;bundle-version="1.2.5",
  org.netxms.ui.eclipse.osm;bundle-version="1.2.5",
  org.eclipse.draw2d;bundle-version="3.8.1",
  org.eclipse.zest.core;bundle-version="2.0.0",
