@@ -51,7 +51,6 @@ Export-Package: org.netxms.api.client,
  org.netxms.ui.eclipse.views.helpers,
  org.netxms.ui.eclipse.widgets,
  org.netxms.ui.eclipse.widgets.helpers,
- org.netxms.webui.tools,
  org.simpleframework.xml,
  org.simpleframework.xml.convert,
  org.simpleframework.xml.core,
