@@ -2,13 +2,13 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Image Library Plugin
 Bundle-SymbolicName: org.netxms.ui.eclipse.imagelibrary;singleton:=true
-Bundle-Version: 1.2.2
+Bundle-Version: 1.2.5
 Bundle-Activator: org.netxms.ui.eclipse.imagelibrary.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.netxms.nebula.widgets.gallery;bundle-version="0.5.3",
- org.netxms.webui.core;bundle-version="1.2.2",
- org.eclipse.rap.ui;bundle-version="1.5.0",
- org.eclipse.rap.rwt.supplemental.filedialog;bundle-version="1.5.0"
+ org.netxms.webui.core;bundle-version="1.2.5",
+ org.eclipse.rap.ui;bundle-version="2.0.0",
+ org.eclipse.rap.rwt.supplemental.filedialog;bundle-version="1.5.100"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.imagelibrary,
