@@ -2,6 +2,7 @@ package org.netxms.ui.eclipse.imagelibrary.shared;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -9,6 +10,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
+import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.swt.SWTException;
 import org.eclipse.swt.graphics.Image;
@@ -18,6 +20,7 @@ import org.netxms.api.client.images.LibraryImage;
 import org.netxms.client.NXCException;
 import org.netxms.client.NXCSession;
 import org.netxms.ui.eclipse.imagelibrary.Activator;
+import org.netxms.ui.eclipse.jobs.ConsoleJob;
 
 public class ImageProvider
 {
@@ -25,11 +28,11 @@ public class ImageProvider
 
 	private static final Map<UUID, Image> cache = Collections.synchronizedMap(new HashMap<UUID, Image>());
 	private static final Map<UUID, LibraryImage> libraryIndex = Collections.synchronizedMap(new HashMap<UUID, LibraryImage>());
-	
-	public static void createInstance(Display display)
+
+	public static void createInstance(Display display, NXCSession session)
 	{
 		if (instance == null)
-			instance = new ImageProvider(display);
+			instance = new ImageProvider(display, session);
 	}
 
 	/**
@@ -43,13 +46,16 @@ public class ImageProvider
 	private final Image missingImage;
 	private final Set<ImageUpdateListener> updateListeners;
 
-	private List<LibraryImage> imageLibrary;
+	private NXCSession session;
+	private Display display;
 
 	/**
 	 * 
 	 */
-	private ImageProvider(Display display)
+	private ImageProvider(Display display, NXCSession session)
 	{
+		this.display = display;
+		this.session = session;
 		final ImageDescriptor imageDescriptor = AbstractUIPlugin.imageDescriptorFromPlugin(Activator.PLUGIN_ID, "icons/missing.png");
 		missingImage = imageDescriptor.createImage(display);
 		updateListeners = new HashSet<ImageUpdateListener>();
@@ -75,46 +81,27 @@ public class ImageProvider
 	 * @throws NXCException
 	 * @throws IOException
 	 */
-	public void syncMetaData(final NXCSession session, final Display display) throws NXCException, IOException
+	public void syncMetaData() throws NXCException, IOException
 	{
-		imageLibrary = session.getImageLibrary();
+		List<LibraryImage> imageLibrary = session.getImageLibrary();
+		libraryIndex.clear();
+		clearCache();
 		for(final LibraryImage libraryImage : imageLibrary)
 		{
 			libraryIndex.put(libraryImage.getGuid(), libraryImage);
-			if (!libraryImage.isComplete())
-			{
-				try
-				{
-					final LibraryImage completeLibraryImage = session.getImage(libraryImage.getGuid());
-					display.asyncExec(new Runnable() {
-						@Override
-						public void run()
-						{
-							final ByteArrayInputStream stream = new ByteArrayInputStream(completeLibraryImage.getBinaryData());
-							try
-							{
-								final Image image = new Image(display, stream);
-								cache.put(completeLibraryImage.getGuid(), image);
-							}
-							catch(SWTException e)
-							{
-								Activator.logError("Exception in ImageProvider.syncMetaData()", e);
-								cache.put(completeLibraryImage.getGuid(), missingImage);
-							}
+		}
+	}
 
-							for(final ImageUpdateListener listener : updateListeners)
-							{
-								listener.imageUpdated(completeLibraryImage.getGuid());
-							}
-						}
-					});
-				}
-				catch(Exception e)
-				{
-					Activator.logError("Exception in ImageProvider.syncMetaData()", e);
-				}
+	private void clearCache()
+	{
+		for(Image image : cache.values())
+		{
+			if (image != missingImage)
+			{
+				image.dispose();
 			}
 		}
+		cache.clear();
 	}
 
 	/**
@@ -131,17 +118,73 @@ public class ImageProvider
 		else
 		{
 			image = missingImage;
+			cache.put(guid, image);
+			if (libraryIndex.containsKey(guid))
+			{
+				new ConsoleJob("Load Image", null, Activator.PLUGIN_ID, null) {
+					
+					@Override
+					protected void runInternal(IProgressMonitor monitor) throws Exception
+					{
+						loadImageFromServer(guid);
+					}
+					
+					@Override
+					protected String getErrorMessage()
+					{
+						// TODO Auto-generated method stub
+						return null;
+					}
+				}.start();
+			}
 		}
 		return image;
+	}
+
+	private void loadImageFromServer(final UUID guid)
+	{
+		LibraryImage libraryImage;
+		try
+		{
+			libraryImage = session.getImage(guid);
+			//libraryIndex.put(guid, libraryImage); // replace existing half-loaded object w/o image data
+			final ByteArrayInputStream stream = new ByteArrayInputStream(libraryImage.getBinaryData());
+			try
+			{
+				display.syncExec(new Runnable() {
+					@Override
+					public void run()
+					{
+						cache.put(guid, new Image(display, stream));
+					}
+				});
+				notifySubscribers(guid);
+			}
+			catch(SWTException e)
+			{
+				Activator.logError("Cannot decode image", e);
+				cache.put(guid, missingImage);
+			}
+		}
+		catch(Exception e)
+		{
+			Activator.logError("Cannot retrive image from server", e);
+		}
+	}
+
+	private void notifySubscribers(final UUID guid)
+	{
+		for(final ImageUpdateListener listener : updateListeners)
+		{
+			listener.imageUpdated(guid);
+		}
 	}
 
 	/**
 	 * Get image library object
 	 * 
-	 * @param guid
-	 *           image GUID
-	 * @return image library element or null if there are no image with given
-	 *         GUID
+	 * @param guid image GUID
+	 * @return image library element or null if there are no image with given GUID
 	 */
 	public LibraryImage getLibraryImageObject(final UUID guid)
 	{
@@ -153,6 +196,21 @@ public class ImageProvider
 	 */
 	public List<LibraryImage> getImageLibrary()
 	{
-		return imageLibrary;
+		return new ArrayList<LibraryImage>(libraryIndex.values());
+	}
+
+	public void invalidateImage(UUID guid, boolean removed)
+	{
+		Image image = cache.get(guid);
+		if (image != null && image != missingImage)
+		{
+			image.dispose();
+		}
+		cache.remove(guid);
+		if (removed)
+		{
+			libraryIndex.remove(guid);
+		}
+		notifySubscribers(guid);
 	}
 }
