@@ -7,7 +7,7 @@ Bundle-Activator: org.netxms.ui.eclipse.networkmaps.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.core.runtime;bundle-version="3.8.0",
  org.netxms.ui.eclipse.objectbrowser;bundle-version="1.2.4",
- org.netxms.ui.eclipse.imagelibrary;bundle-version="1.2.2",
+ org.netxms.ui.eclipse.imagelibrary;bundle-version="1.2.5",
  org.netxms.ui.eclipse.osm;bundle-version="1.2.5",
  org.eclipse.rap.ui;bundle-version="2.0.0",
  org.netxms.webui.core;bundle-version="1.2.5",
